--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -428,7 +428,7 @@
 /* qaa */
 .cliqz-qaa-sources-headline {
     text-align: center;
-    color: red;
+    color: #222;
     font-size: 11px;
     font-weight: bold;
     padding-bottom: 5px;
@@ -443,7 +443,7 @@
     color: #333333;
     width: 300px;
     overflow: hidden;
-    height: 26px;
+    height: 28px;
     font-weight: bold;
     background-repeat: no-repeat;
     background-position: left 2px;
@@ -488,7 +488,7 @@
 }
 
 .cliqz-qaa-posted-value {
-    color: gray;
+    color: #888;
 }
 
 /* end qaa */
