--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -288,12 +288,11 @@
 
 .cliqz-weather-today-temp {
     float:left;
-    margin-top: 5px;
 }
 
 .cliqz-weather-now {
     font-size: 32px;
-    line-height: 49px;
+    line-height: 54px;
     color: grey;
 }
 
@@ -413,13 +412,14 @@
 .cliqz-hq-links {
     max-height: 1.3em;
     overflow: hidden;
+    max-width: 85%;
+    margin-top: 8px;
 }
 
 .cliqz-hq-link {
     font-size: 9pt;
-    color: #00F;
+    color: #0054a6;
     float: left;
-    font-weight: bold;
     padding-right: 15px;
     cursor: pointer;
 }
@@ -497,6 +497,7 @@
 /* people */
 .people-box {
     font-size: 12pt;
+    margin-bottom: 5px;
 }
 
 .cliqz-people-image-box {
@@ -527,7 +528,7 @@
 
 .cliqz-people-name {
   font-weight: bold;
-  color: #222222
+  color: #222222;
 }
 
 .cliqz-people-company {
@@ -541,12 +542,12 @@
 }
 
 .cliqz-people-agoline {
-  color: #cccccc;
+  color: #acacac;
   padding-left: 3pt;
 }
 
 .cliqz-people-branch {
-  color: #cccccc;
+  color: #acacac;
 }
 
 /* end people */
@@ -571,7 +572,6 @@
 }
 
 .cliqz-shopping-result-reviews {
-  display: inline;
   margin-left: 5px;
   color: #444444;
 }
@@ -579,6 +579,11 @@
 /* end shopping */
 
 /* video */
+
+.cliqz-result-video-mid-box {
+    vertical-align: top;
+    margin-top: -4px;
+}
 
 .cliqz-result-video-views {
   height: 18px;
@@ -591,20 +596,27 @@
 }
 
 .cliqz-result-video-author {
-  font-size: 12px;
-  color: #999999;
-  padding: 2px 0;
+    font-size: 12px;
+    color: #999999;
+    padding: 2px 0;
+    margin-left: 10px;
 }
 
 .cliqz-result-video-duration {
-  background: #000000;
-  color: #ffffff;
-  padding: 1px 4px 4px 4px;
-  margin-top: 5px;
+    background-color: black;
+    color: #ffffff;
+    padding: 0px 4px 4px 4px;
+    margin-top: 5px;
+    font-size: 9pt;
+    font-weight: bold;
 }
 
 .cliqz-video-arrow:before {
     content:'▶';
+    font-size: 9px;
+    position: relative;
+    top: -1px;
+    left: 1px;
 }
 
 /* end video */
