--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -202,7 +202,7 @@
     background-size: 36px 36px;
 }
 
-.cliqz-result-item-box:hover .cliqz-logo {
+.cliqz-result-generic:hover .cliqz-logo {
   background: url(chrome://cliqzres/content/skin/popout_icon.png) no-repeat center center;
   cursor: pointer;
 }
@@ -380,25 +380,33 @@
     overflow: hidden;
 }
 
-.cliqz-news-source-title-with-logo {
+.cliqz-news-source-title {
     font-size: 8pt;
     color: #333333;
     max-width: 300px;
     overflow: hidden;
     height: 30px;
     font-weight: bold;
+    cursor: pointer;
+    display: inline-block;
+}
+
+.cliqz-news-source-logo {
+    height: 30px;
+    width: 30px;
     background-repeat: no-repeat;
     background-position: left 2px;
-    padding-left: 30px;
     background-size: 24px 24px;
     cursor: pointer;
     display: inline-block;
-    margin: 2px 5px 2px 0px;
+}
+
+.cliqz-news-source:hover .cliqz-news-source-logo {
+    background-image: url(chrome://cliqzres/content/skin/popout_icon.png);
 }
 
 .cliqz-news-source {
-    overflow: hidden;
-    margin: 2px 2px 2px 0px;
+    display: inline-block;
 }
 /* end news */
 
