--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -375,9 +375,21 @@
 
 .cliqz-news-sources {
     background: #f3f3f3;
-    padding: 5px 0 5px 35px;
+    padding: 5px 0 5px 15px;
     max-height: 30px;
-    overflow: hidden;
+    white-space: nowrap;
+}
+
+.cliqz-news-sources:before{
+    content: "";
+    width: 0px;
+    height: 0px;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 20px solid #F3F3F3;
+    position: relative;
+    top: -18px;
+    left: -15px;
 }
 
 .cliqz-news-source-title {
@@ -407,6 +419,7 @@
 
 .cliqz-news-source {
     display: inline-block;
+    white-space: normal;
 }
 /* end news */
 
@@ -642,6 +655,40 @@
 }
 
 /* end custom */
+
+/* f1 result */
+
+.cliqz-f1-logo-f1 {
+    background-image: url(chrome://cliqzres/content/skin/f1-logo.png);
+    width: 200px;
+    height: 94px;
+    margin-right: 40px;
+}
+
+.cliqz-f1-logo-stage {
+    background-image: url(chrome://cliqzres/content/skin/hungaroring.png);
+    width: 92px;
+    height: 52px;
+    margin-left: 40px;
+}
+
+.cliqz-f1-count-box {
+    float:left;
+    text-align: center;
+    margin-left: 20px;
+}
+.cliqz-f1-count-unit {
+    float: left;
+    border: 1px solid #CCC;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    font-size: 12pt;
+    font-weight: bold;
+    background-color: #eee;
+}
+/* endf1 result */
 
 /* misc */
 .cliqz-inline-box-children>* {
