--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -375,11 +375,11 @@
 /* cluster */
 
 .cliqz-cluster-title-box {
-  font-size: 14px;
-  font-weight: bold;
-  color: #FF9900;
-  color: black;
-  margin-right: 5px;
+    background-color: grey;
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+    padding: 5px 5px 2px 5px;
 }
 
 .cliqz-cluster-result-url {
@@ -389,19 +389,40 @@
   margin-right: 20px;
 }
 
+.cliqz-cluster-result-topic {
+    margin-top: 10px;
+}
+
 .cliqz-cluster-topic-label {
-  color: white;
-  border-radius: 1px;
   padding: 2px 6px;
   font-size: 14px;
-  text-align: center;
-  margin: 2px 0px;
-  display: inline-block;
+  margin: 5px 0px;
+  font-weight: bold;
+}
+
+.cliqz-cluster-items {
+    margin-left: 75px;
 }
 
 .cliqz-cluster-topic {
-  margin: 5px 5px 1px 3px;
-  padding: 1px 5px 2px 5px;
+    margin-right: 20px;
+    position: relative;
+}
+
+.cliqz-cluster-topic:before {
+    height: 9px;
+    width: 9px;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    content: "";
+    background-color: gray;
+    left: -14px;
+    top: 2px;
+}
+
+.cliqz-cluster-topic-guessed:before {
+    background-color: blue;
 }
 
 .cliqz-cluster-topic:hover {
