--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -391,15 +391,25 @@
 }
 
 .cliqz-cluster-result-topic {
-    margin-top: 10px;
+    margin-bottom: 6px;
+    padding-bottom: 2px;
 }
 
 .cliqz-cluster-topic-label {
   padding: 2px 6px 5px;
   font-size: 14px;
   color: white;
-  border-radius: 2px;
-  margin: 5px 10px;
+  border-radius: 4px;
+  margin: 0px 10px;
+  cursor: pointer;
+}
+
+.cliqz-cluster-topic-label:before {
+    content: "▶";
+    font-size: 9px;
+    position: relative;
+    top: -1px;
+    left: 1px;
 }
 
 .cliqz-cluster-items {
@@ -408,6 +418,7 @@
 
 .cliqz-cluster-topic {
     margin-right: 20px;
+    padding: 3px;
 }
 
 .cliqz-cluster-topic:hover {
@@ -454,6 +465,7 @@
 
 .cliqz-series-topic {
     margin-right: 20px;
+    padding: 3px;
     position: relative;
 }
 
@@ -466,7 +478,7 @@
     content: "";
     background-color: #ccc;
     left: -14px;
-    top: 2px;
+    top: 5px;
 }
 
 .cliqz-series-topic-guessed:before {
