--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -379,8 +379,9 @@
     font-size: 14px;
     font-weight: bold;
     color: white;
-    padding: 5px 5px 2px 5px;
+    padding: 4px 5px 5px 5px;
     margin-right: 20px;
+    display: inline-block;
 }
 
 .cliqz-cluster-result-url {
@@ -396,14 +397,14 @@
 }
 
 .cliqz-cluster-topic-label {
-  padding: 2px 6px 5px;
+  padding: 1px 2px 3px 6px;
   font-size: 14px;
   color: white;
   border-radius: 4px;
   margin: 0px 10px;
   cursor: pointer;
 }
-
+/*
 .cliqz-cluster-topic-label:before {
     content: "▶";
     font-size: 9px;
@@ -411,7 +412,7 @@
     top: -1px;
     left: 1px;
 }
-
+*/
 .cliqz-cluster-items {
     margin-left: 75px;
 }
