UI fixes + enable series guessing from 7 chars typed

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -485,7 +485,7 @@
 }
 
 .cliqz-series-topic-guessed:before {
-    background-color: #3399ff;
+    background-color: #4c48a3;
 }
 
 .cliqz-series-topic:hover {
