--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -218,6 +218,13 @@
 
 /* end results */
 
+/* Last search history */
+
+.cliqz-urlbar-Last-search-container {
+    max-width: 220px;
+    overflow: hidden;
+}
+
 .cliqz-urlbar-Last-search {
     background: url(chrome://cliqzres/content/skin/rabbit_arrow.png) no-repeat 5px center;
     background-size: 14px 10px;
@@ -231,11 +238,19 @@
     overflow: hidden;
 }
 
+.cliqz-urlbar-Last-search-list {
+    color: white;
+    background-color: grey;
+    margin: 0px;
+    padding: 4px 10px;
+}
+
+.cliqz-urlbar-Last-search-list:hover,
 .cliqz-urlbar-Last-search:hover {
     background-color: #909090;
   }
 
-.cliqz-urlbar-Last-dropdown-arrow {
+.cliqz-urlbar-Last-search-dropdown-arrow {
     background: url(chrome://cliqzres/content/skin/arrow_down.png) no-repeat center;
     -moz-appearance: none;
     color: white;
@@ -243,6 +258,8 @@
     margin: 0;
     min-width: 20px;
 }
+
+/* End last search history */
 
 /* weather */
 .cliqz-weather-left-box {
