--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -812,17 +812,27 @@
 
 /* dictionary */
 
+.cliqz-result-dictionary-pronunciation {
+    font-style: italic;
+    font-weight: normal;
+    color: #ABABAB;
+}
+
+.cliqz-result-dictionary-type {
+    font-weight: bold;
+}
+
 .cliqz-result-mid-box ol {
-    margin-left: 0;
+    margin: 5px 0;
     padding-left: 18px
 }
 
 .cliqz-result-dictionary-definition {
-    width: 80%;
+    width: 90%;
     color: #666666;
 }
 
-.cliqz-result-dictionary-type {
+.cliqz-result-dictionary-subtype {
     color: #FFA319;
 }
 
