--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -274,14 +274,14 @@
 /* oktoberfest */
 
 .cliqz-okt-left-box {
-    padding-top: 10px;
+    padding: 15px 0 10px 0;
     margin-right: 20px;
-    width: 178px;
+    width: 170px;
     float: left;
 }
 
 .cliqz-okt-name {
-    background-color: #289EF4;
+    background-color: #0099ff;
     font-size: 16px;
     font-weight: bold;
     color: white;
@@ -293,18 +293,20 @@
 
 .cliqz-okt-date {
     color: grey;
-    padding: 5px;
+    padding: 5px 5px 5px 10px;
+    font-size: 11px;
 }
 
 .cliqz-okt-image {
-    margin-top: 5px;
+    margin-top: 12px;
     float: left;
-    width: 300px;
+    width: 541px;
     height: 55px;
+    background-size: 541px 55px;
 }
 
 .cliqz-okt-btn-box {
-    margin: 5px 10px 0 0;
+    margin: 10px 10px 0 0;
     float: right;
 }
 
@@ -312,7 +314,7 @@
     line-height: 20px;
     color: white;
     font-weight: bold;
-    padding: 3px 5px;
+    padding: 3px 10px;
     border-radius: 3px;
     text-align: center;
     font-size: 12px;
@@ -320,28 +322,50 @@
 }
 
 .cliqz-okt-btn-top {
-    background-color: #289EF4;
+    background: url(chrome://cliqzres/content/skin/okt/clock.png) no-repeat 8px center;
+    background-size: 15px 15px;
+    background-color: #0099ff;
     margin-bottom: 5px;
+    padding-left: 28px;
+    padding-bottom: 4px;
 }
 .cliqz-okt-btn-bot-left {
     float: left;
-    background-color: #289EFF;
+    background-color: #3d7ade;
     margin-right: 5px;
 }
 .cliqz-okt-btn-bot-right {
     float: left;
-    background-color: #289EE6;
+    background-color: #5cb0fe;
 }
 .cliqz-okt-btn-bot-right:after {
     clear: both;
 }
 .cliqz-okt-logo {
     float: right;
-    margin: 5px 15px 0 0;
-    background-image:url(https://lh3.googleusercontent.com/-ed2xRtW5E-w/AAAAAAAAAAI/AAAAAAAAAGg/t8fsuLZOwVI/s120-c/photo.jpg);
-    background-size: 55px 55px;
-    width: 55px;
-    height: 55px;
+    margin: 15px 20px 0 10px;
+    background-image:url(chrome://cliqzres/content/skin/okt/cliqz_okt_logo.png);
+    background-size: 65px 53px;
+    width: 65px;
+    height: 53px;
+}
+
+@media (max-width: 1400px) {
+  .cliqz-okt-logo {
+    display: none;
+  }
+}
+
+@media (max-width: 1300px) {
+  .cliqz-okt-btn-box {
+    display: none;
+  }
+}
+
+@media (max-width: 1150px) {
+  .cliqz-okt-image {
+    display: none;
+  }
 }
 /* end oktoberfest*/
 
