--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -953,6 +953,33 @@
 }
 
 .cliqz-result-dictionary-translation-language {
+	text-transform: uppercase;
+    font-weight: bold;
+    padding-left: 5px;
+}
+
+.cliqz-result-dictionary-language-header {
+	text-transform: uppercase;
+    font-weight: bold;
+}
+
+.cliqz-result-dictionary-synonyms {
+    display: block
+    font-size: 12px;
+    background: #f3f3f3;
+    padding: 2px 0 2px 15px;
+    max-height: 15px;
+    overflow: hidden;
+}
+
+.cliqz-result-dictionary-synonyms:after {
+    content: ','
+}
+.cliqz-result-dictionary-synonyms:last-of-type:after {
+    content: ''
+}
+
+.cliqz-result-dictionary-synonyms-header {
     font-weight: bold;
     padding-left: 5px;
 }
