Moved the dictionary toggler to the right of the main content. Added two new styles to browser.css, but they are not final (very much in debug mode, to be honest).

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -919,6 +919,18 @@
 
 /* dictionary */
 
+.cliqz-result-dictionary-main {
+	float: left;
+	margin-right: 110px;
+	background: red;
+}
+
+.cliqz-result-dictionary-toggler {
+	width: 100px;
+	float: right;
+	background: blue;
+}
+
 .cliqz-result-dictionary-pronunciation {
     font-style: italic;
     font-weight: normal;
