--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -98,6 +98,12 @@
 .cliqz-result-tags {
     float: right;
     padding-right: 0px !important;
+    margin-right: 5px;
+}
+.cliqz-result-tags span {
+    background-color: #cfeef9;
+    padding: 4px;
+    margin: 3px 3px 0 0;
 }
 /*
 #cliqz-results * {
