--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -101,8 +101,9 @@
     margin-right: 5px;
 }
 .cliqz-result-tags span {
-    background-color: #cfeef9;
-    padding: 4px;
+    background-color: #e4fbe0;
+    padding: 8px;
+    line-height: 20px;
     margin: 3px 3px 0 0;
 }
 /*
