--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -197,14 +197,14 @@
 }
 
 /* cliqz ad  */
-.cliqz-result-item-box[ad-ui="true"] {
+.cliqz-result-item-box[extra="ad"] {
     background-color: #fffef2 ;
 }
-.cliqz-result-item-box[ad-ui="true"] .cliqz-result-type {
+.cliqz-result-item-box[extra="ad"] .cliqz-result-type {
     opacity: 1 !important;
 }
 
-.cliqz-result-item-box[ad-ui="true"] .cliqz-result-type:after {
+.cliqz-result-item-box[extra="ad"] .cliqz-result-type:after {
     content: 'AD';
     background-color: #f4d23e;
     opacity: 1 !important;
@@ -212,7 +212,7 @@
     padding: 3px;
 }
 
-.cliqz-result-item-box[ad-ui="true"] .cliqz-result-left-box {
+.cliqz-result-item-box[extra="ad"] .cliqz-result-left-box {
     text-align: left;
 }
 
