--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -51,7 +51,7 @@
     font-style: italic;
     color: #999999;
 }
-
+/*
 .cliqz-footer-engines:hover #cliqz-engines-box {
     max-width: 260px;
 }
@@ -60,13 +60,13 @@
 #cliqz-engines-box:hover .cliqz-engines-text {
     opacity: 0;
 }
-
+*/
 #cliqz-engines-box {
     background-color: #eeeeee;
     float:right;
     overflow: hidden;
     white-space: nowrap;
-    max-width: 0px;
+    max-width: 260px;
     transition: all linear 0.8s ;
     z-index: 1;
     position: absolute;
@@ -83,6 +83,12 @@
 
 .cliqz-engine {
     cursor: pointer;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+}
+
+.cliqz-engine:hover {
+    cursor: pointer;
+    filter: none;
 }
 
 
