Finished news template

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -1086,6 +1086,10 @@
   padding: 15px;
 }
 
+.entity-search-container [url] {
+  cursor: pointer;
+}
+
 .entity-search-aktuell {
   padding-bottom: 15px;
 }
